--- a/src/component/guestbook/index.scss
+++ b/src/component/guestbook/index.scss
@@ -1,5 +1,4 @@
-.guestbook,
-.all-guestbook-modal {
+.guestbook {
   .post {
     text-align: left;
     box-shadow: 0.1rem 0.1rem 0.3rem 0 rgba(0, 0, 0, 0.1);
@@ -13,11 +12,13 @@
       margin: 0.5rem;
       display: flex;
       justify-content: flex-end;
+
       .close-button {
         position: relative;
         z-index: 3;
         width: 0.8rem;
         height: 0.8rem;
+
         &::before {
           content: "";
           width: 0.1rem;
@@ -28,6 +29,7 @@
           top: 0;
           left: 50%;
         }
+
         &::after {
           content: "";
           width: 0.1rem;
@@ -43,40 +45,74 @@
 
     .body {
       margin: 0 1.3rem 1.3rem 1.3rem;
+
       .title {
         display: flex;
         align-items: center;
+        margin-bottom: 0.8rem;
+
         .name {
           margin-right: 0.5rem;
         }
+
         .date {
           font-size: 0.8rem;
           opacity: 0.5;
         }
-        margin-bottom: 0.8rem;
       }
+
       .content {
         word-wrap: break-word;
         white-space: pre-wrap;
       }
     }
   }
+
+  /* ✅ 페이지네이션 추가 */
+  .pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+
+    .page {
+      padding: 0.3rem 0.5rem;
+      margin: 0 0.2rem;
+      border: 1px solid var(--dark-grey-color);
+      border-radius: 0.3rem;
+      cursor: pointer;
+      user-select: none;
+
+      &.current {
+        background-color: var(--theme-color);
+        color: var(--white-color);
+      }
+
+      &:hover:not(.current) {
+        background-color: var(--light-grey-color);
+      }
+    }
+  }
 }
 
+/* ✏️ 방명록 작성 모달 */
 .write-guestbook-modal {
   width: 22rem;
 
   .header {
     .title-group {
       text-align: center;
+
       .title {
         font-size: 1.2rem;
         color: var(--theme-color);
         padding: 0.5rem;
       }
+
       .subtitle {
         font-size: 0.9rem;
       }
+
       padding-bottom: 1rem;
       border-bottom: 1px solid var(--dark-grey-color);
     }
@@ -113,51 +149,14 @@
   .footer {
     display: flex;
     flex-direction: row;
+
     button {
       width: 100%;
     }
   }
 }
 
-.all-guestbook-modal {
-  width: 24rem;
-
-  .header {
-    > .title {
-      text-align: center;
-      font-size: 1.2rem;
-      color: var(--theme-color);
-      padding-bottom: 1rem;
-    }
-  }
-
-  > .content {
-    padding: 0 1rem 0.7rem 1rem;
-
-    .pagination {
-      display: flex;
-      justify-content: center;
-      margin-top: 0.5rem;
-      margin-bottom: 0.5rem;
-      .page {
-        padding: 0.3rem 0.5rem;
-        margin: 0 0.2rem;
-        border: 1px solid var(--dark-grey-color);
-        border-radius: 0.3rem;
-        &.current {
-          background-color: var(--theme-color);
-          color: var(--white-color);
-        }
-      }
-    }
-  }
-
-  .footer {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
+/* 🗑️ 삭제 모달 */
 .delete-guestbook-modal {
   width: 22rem;
 
@@ -191,6 +190,7 @@
   .footer {
     display: flex;
     flex-direction: row;
+
     button {
       width: 100%;
     }
