--- a/src/App.scss
+++ b/src/App.scss
@@ -337,8 +337,8 @@ div.break {
     h2 {
       background: none !important;
       -webkit-background-clip: initial !important;
-      -webkit-text-fill-color: #ffdcdc !important;
-      color: #ffdcdc !important;
+      -webkit-text-fill-color: #fff4f4 !important;
+      color: #fff4f4 !important;
     }
   }
 
@@ -370,8 +370,8 @@ div.break {
     h2 {
       background: none !important;
       -webkit-background-clip: initial !important;
-      -webkit-text-fill-color: #ffe1e1 !important;
-      color: #ffe1e1 !important;
+      -webkit-text-fill-color: #fff4f4 !important;
+      color: #fff4f4 !important;
       text-shadow: 0 0 6px rgba(255, 180, 180, 0.8) !important;
       mix-blend-mode: normal !important;
     }
