--- a/src/component/cover/index.scss
+++ b/src/component/cover/index.scss
@@ -1,5 +1,5 @@
 .cover {
-  font-size: 1.15rem; /* ✅ 폰트 사이즈 15% 확대*/
+  font-size: 2rem; /* ✅ 폰트 사이즈 15% 확대*/
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -113,7 +113,7 @@
   }
 
   /* 반응형 */
-  @media (max-width: 768px) {
+  @media  {
     padding: 3rem 1rem;
 
     > .names {
